# Project-Data-Processing

./: .gitignore  README.md  test.py
de_batch_ingestion_framework/: setup.cfg
de_batch_ingestion_framework/src/vanhaydoi_batch_ingestion/: __init__.py  json_processor.py  tempCodeRunnerFile.py
de_batch_ingestion_framework/src/vanhaydoi_batch_ingestion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
de_dags/: batch_pipeline_dag.py
de_hdfs_elt_framework/src/vanhaydoi_hdfs_etl/: raw_to_staging.py  staging_to_mart.py
de_streaming_ingestion_framework/src/vanhaydoi_streaming_ingestion/: __init__.py  streaming_ingestion.py
