[metadata]
name = vanhaydoi_batch_ingestion
version = 0.2.0
author = Vanhaydoi
author_email = nguyenduyvanhaydoi1512@gmail.com
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_project
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
include_package_data = True
install_requires =
    # example dependencies
    requests

[options.packages.find]
where = src
exclude = 
    docs*

